testsuite/tests/properties/invalid_unique/test.out
== Not an array ==
test.py:22: error: Array expected but got Example instead
== Not hashable array element ==
test.py:22: error: Element type (here Token) must be hashable
Done
